[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/kenney_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GFX/HUD/coin_bronze.png" type="Texture" id=4]
[ext_resource path="res://GFX/HUD/lifes.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 4
outline_color = Color( 0.435294, 0.121569, 0.121569, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="GUI" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = -0.000307083
anchor_top = 0.000524139
anchor_right = 0.999693
anchor_bottom = 1.00052
margin_left = 0.500183
margin_right = 0.500244
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -286.0
margin_bottom = 118.0
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerLeft" type="HBoxContainer" parent="Control/TextureRect/HBoxContainer"]
margin_left = 11.0
margin_right = 119.0
margin_bottom = 118.0
custom_constants/separation = 10
alignment = 1

[node name="CoinCount" type="Label" parent="Control/TextureRect/HBoxContainer/HBoxContainerLeft"]
margin_top = 32.0
margin_right = 38.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="CoinIcon" type="TextureRect" parent="Control/TextureRect/HBoxContainer/HBoxContainerLeft"]
margin_left = 48.0
margin_right = 108.0
margin_bottom = 118.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="HBoxContainerRight" type="HBoxContainer" parent="Control/TextureRect/HBoxContainer"]
margin_left = 149.0
margin_right = 275.0
margin_bottom = 118.0

[node name="LifeCount" type="Label" parent="Control/TextureRect/HBoxContainer/HBoxContainerRight"]
margin_top = 32.0
margin_right = 38.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="LifeIcon" type="TextureRect" parent="Control/TextureRect/HBoxContainer/HBoxContainerRight"]
margin_left = 42.0
margin_right = 126.0
margin_bottom = 118.0
texture = ExtResource( 5 )
stretch_mode = 4
flip_h = true
